# lambda-star

./: README.md  lambda-star.cabal
app/: Main.hs
src/Lang/: LambdaStar.hs
src/Lang/LambdaStar/: Terms.hs
