name:                lambda-star
version:             0.1.0.0
synopsis: An implementation of λ* from https://doi.org/10.1145/2775051.2676976
-- description:
homepage:            https://github.com/githubuser/lambda-star#readme
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           2017 Devin Lehmacher
category:            Programming Languages, Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.LambdaStar,
                       Lang.LambdaStar.Terms
  build-depends:       base >= 4.7 && < 5,
                       lens
  default-language:    Haskell2010

executable lambda-star-i
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-star
  default-language:    Haskell2010

test-suite lambda-star-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambda-star
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lambda-star
